Prevent Long Widget Title Overlap With

--- a/css/admin.less
+++ b/css/admin.less
@@ -488,6 +488,7 @@
 
 							.title {
 								.actions {
+									background: #feffff;
 									font-size: 12px;
 									position: absolute;
 									top: 5px;
@@ -496,12 +497,8 @@
 									padding: 2px 2px 2px 15px;
 									z-index: 10;
 
-									&:hover {
-										background: #feffff;
-
-										a{
-											opacity: 1;
-										}
+									&:hover a {
+										opacity: 1;
 									}
 
 									a {
